--- a/CHANGELOG.org
+++ b/CHANGELOG.org
@@ -26,7 +26,6 @@
 ** Bugs Fixed [0/3]
 
 - [ ] TextField and TextEntryBox don't work
-- [ ] ~unregister~ fails and throws an error
 
 ** Restructuring [0/3]
 
@@ -36,9 +35,10 @@
 
 * Version 0.2.2
 
-** Bugs Fixed [1/3]
+** Bugs Fixed [2/4]
 
 - [X] Children of offset transparent components are rendered incorrectly (turns out other fix was insufficient)
+- [X] ~unregister~ fails and throws an error
 - [ ] Registering and unregistering doesn't trigger redraw
 - [ ] Unregistering doesn't remove from _graphical_children
 
